--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@prismicio/client": "^7.12.0",
     "@prismicio/next": "^1.7.1",
     "@prismicio/react": "^2.9.1",
+    "gsap": "^3.12.5",
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106"
